--- a/src/readings/blockchain_basics.yaml
+++ b/src/readings/blockchain_basics.yaml
@@ -8,7 +8,7 @@
   details: |
     This video enables learners to know about
       * Decentralised opportunities
-      * Bascis of Cryptocurrency      
+      * Basics of Cryptocurrency      
       * Blockchain network types
 
 - uuid: 0c7eaedf-b949-4da3-bdc5-fb21f3633311
