--- a/src/summaries/introduction_to_defi.yaml
+++ b/src/summaries/introduction_to_defi.yaml
@@ -49,6 +49,9 @@
       * Bank customers do not know the health of the bank.
       * Individuals are forced to rely on costly regulation and promise of bailouts.
 
+    - High operating cost
+      * Banking institutions have high running cost due to accomodate large number of workers.
+
     These problems when not tackled lead to following destructive effects.
 
     - Missed Growth Opportunities
@@ -97,3 +100,7 @@
       * Ethereum enables robust smart contract capabilities, thereby opening up the roads for issuing crypto tokens. 
       * Crypto tokens basically worked as digital assets present on a blockchain alongside having different features and uses.
       
+    - Constant Updation 
+      * Developers can build upon existing code because DeFi is open source.
+      * Easy to build applications/products (Cloud simplified creation of applications. Blockchain simplifies creation of financial apps)
+      * This helps in removing bugs and bring about great innovations in the existing system. 
