chapter 1 review 1 completed

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -50,8 +50,8 @@ topics:
       Explain on a high level what are smart contract, and where do they run
       
       Details 
-      * How Ethereum transactions
-      * miner extractable value.
+      * How Ethereum transactions work
+      * Miner extractable value (MEV)
       * Smart contracts / Gas / Oracles
       * Fungible and non-fungible (NFT) tokens 
       * dApps
