--- a/src/questions/introduction_to_defi.yaml
+++ b/src/questions/introduction_to_defi.yaml
@@ -9,16 +9,16 @@
     - "introduction-to-decentralised-finance"
   difficultyLevel: "Low"
   choices:
-    - content: Technological playground for developers.
+    - content: Provide banking facilties only to high worth individuals
       key: A
       order: 0
-    - content: Providing financial solutions on blockchain.
+    - content: Providing financial solutions on blockchain
       key: B
       order: 1
-    - content: No dedicated purpose
+    - content: Trade and earn more using cryptocurrency
       key: C
       order: 2
-    - content: Foster and encourage money laundering.
+    - content: Encourage money laundering.
       key: D
       order: 3
 - uuid: 3677cbd2-5d77-4a56-b0b2-95c051df9a6d
@@ -43,7 +43,7 @@
     - content: For yield farming and liquidity mining
       key: C
       order: 2
-    - content: For traditional banking
+    - content: For Securing money in vaults
       key: D
       order: 3
 - uuid: 8ea2424d-3067-44d7-8233-2b3b40559781
@@ -55,7 +55,6 @@
     - A
     - B
     - C
-    - D
   subTopics:
     - "introduction-to-decentralised-finance"
   difficultyLevel: "Low"
@@ -69,7 +68,7 @@
     - content: Executing smart contracts
       key: C
       order: 2
-    - content: Interaction with dapps
+    - content: An authority monitoring all transactions to avoid mishappenings
       key: D
       order: 3
 - uuid: de547cb2-82cd-46e1-bae3-01253f9a41e2
@@ -150,7 +149,7 @@
     - "introduction-to-decentralised-finance"
   difficultyLevel: "Medium"
   choices:
-    - content: Computer to computer
+    - content: Person to Person
       key: A
       order: 0
     - content: Peer to Peer
@@ -174,10 +173,10 @@
     - "centralised-vs-decentralised-finance"
   difficultyLevel: "Medium"
   choices:
-    - content: Bank charges 3 % for credit card swipes.
+    - content: Bank charges upto 3 % for credit card swipes.
       key: A
       order: 0
-    - content: It takes 2 days to settle a stock transaction
+    - content: It can take around 2 days to settle a stock transaction
       key: B
       order: 1
     - content: Banks provide safe vaults for keeping valuable assets.
@@ -206,7 +205,7 @@
     - content: 10%
       key: C
       order: 2
-    - content: 25%
+    - content: 20%
       key: D
       order: 3
 - uuid: 9f864936-5494-4771-bf6e-c744a9f18618
@@ -234,7 +233,7 @@
       order: 3
 - uuid: 93e24b6c-9a74-4bae-8c93-c439620fe67e
   type: SingleChoice
-  content: What is the Total value locked in DeFi as of November 2021?
+  content: What is the maximum Total value locked in DeFi as of November 2021?
   hint: NoHint
   explanation: TVL or Total value locked refers to total stored value in the blockchain. Currently, DeFi accomodates more than $40 Billion of worth in it.
   answerKeys:
@@ -320,7 +319,7 @@
       order: 1
 - uuid: 2c93b4b7-d351-4a32-aaaa-5170524b04dc
   type: MultipleChoice
-  content: How does DeFi help young entrepreneurs?
+  content: How does DeFi help small scale businesses?
   hint: DeFi has no hidden charges and it is fast technology.
   explanation: In DeFi there are no charges on a credit card swipe, the fund transfer is fast and affordable and allows flash loans to its users as well.
   answerKeys:
@@ -355,7 +354,7 @@
     - "centralised-vs-decentralised-finance"
   difficultyLevel: "Medium"
   choices:
-    - content: Centralised loans require a lot of collateral
+    - content: Unpaid Centralised loans lead to loss for banks
       key: A
       order: 0
     - content: Bank loans are easy to get
@@ -369,22 +368,22 @@
       order: 3
 - uuid: 8225cb91-1898-4dec-9c3c-ad1395cb2568
   type: SingleChoice
-  content: We can access the world of DeFi using......
+  content: How can someone access the world of DeFi?
   hint: NoHint
-  explanation: Decentrlaised Finance can be accessed using dapps or decentralised applications.
+  explanation: Decentralised Finance can be accessed using dapps or decentralised applications.
   answerKeys:
     - B
   subTopics:
     - "introduction-to-decentralised-finance"
   difficultyLevel: "Low"
   choices:
-    - content: Bank account
+    - content: Using Bank accounts
       key: A
       order: 0
-    - content: Decentralised Applications
+    - content: Using Decentralised Applications
       key: B
       order: 1
-    - content: Email Address
+    - content: Using Email accounts
       key: C
       order: 2
     - content: Currently it is inaccessible
@@ -403,13 +402,13 @@
     - "centralised-vs-decentralised-finance"
   difficultyLevel: "Low"
   choices:
-    - content: Fund transfer takes more than 2 days
+    - content: Fund transfer can take more than 2 days
       key: A
       order: 0
     - content: Banks do not allow micro-transactions
       key: B
       order: 1
-    - content: Bank charges on fund transfer are high
+    - content: Bank charges on fund transfer can be high
       key: C
       order: 2
     - content: None of these
@@ -493,7 +492,6 @@
     - A
     - B
     - C
-    - D
   subTopics:
     - "uses-of-decentralised-finance"
   difficultyLevel: "Medium"
@@ -507,14 +505,14 @@
     - content: Trading insurances
       key: C
       order: 2
-    - content: Selling of real estate
+    - content: None of the above
       key: D
       order: 3
 - uuid: 180372da-370f-43f5-bf0e-900c45cc247f
   type: MultipleChoice
   content: Why many people around the globe are unbanked?
   hint: Disadvantages of CeFi
-  explanation: People are unbanked due to lack of financial knowledge and they unlike banks because they are prone to many frauds and scams.
+  explanation: People are unbanked due to lack of financial knowledge and they dont have enough money to put into banks.
   answerKeys:
     - C
     - D
@@ -531,7 +529,7 @@
     - content: Lack of financial knowledge
       key: C
       order: 2
-    - content: Banks are disliked due to various frauds.
+    - content: People have a lack of money
       key: D
       order: 3
 - uuid: 06436ae9-003c-4ead-b27b-3b31d914b61a
@@ -620,7 +618,7 @@
     - content: Loan not sent to correct borrower
       key: B
       order: 1
-    - content: Loan amount used for trading in different markets.
+    - content: Borrower uses the loan amount to stake in different liquidity pools to earn a profit.
       key: C
       order: 2
     - content: Insufficient balance to grant loan.
@@ -630,7 +628,7 @@
   type: SingleChoice
   content: What provides stability to stablecoins?
   hint: Coin gains stability by the asset which backs it.
-  explanation: Stablecoins are backed by stable valuable assets like gold or USD.
+  explanation: Stablecoins are backed by stable valuable assets like gold, USD or some algorithm which helps in maintaining a constant value.
   answerKeys:
     - C
   subTopics:
@@ -643,7 +641,7 @@
     - content: They are not valuable assets.
       key: B
       order: 1
-    - content: Backed by a stable asset such as gold or USD
+    - content: Backed by a stable asset such as gold, USd or an algorithm.
       key: C
       order: 2
     - content: None of the above
@@ -672,7 +670,7 @@
   hint: DeFi is available for all
   explanation: DeFi is open source and any developer can fork and build layer above the current version which makes this technology stay up to date.
   answerKeys:
-    - A
+    - C
   subTopics:
     - "uses-of-decentralised-finance"
   difficultyLevel: "Low"
@@ -714,32 +712,31 @@
       key: D
       order: 3
 - uuid: d1fd9e89-a269-47ce-aa53-effbc2f8551d
-  type: MultipleChoice
-  content: High bank interest rates mostly hamper.....
-  hint: Disadvantages of CeFi
-  explanation: High bank interest rates mostly hamper entrepreneurs and small scale businesses because they might not be able to pay back the loan and hence are not granted loans.
+  type: SingleChoice
+  content: What is an Automated Market Maker?
+  hint: Working of Decentralised Exchanges
+  explanation: Automated market makers (AMMs) enable instant trading between one asset and another in a decentralized trading environment. AMMs always ensure that there is enough liquidity for any users trade to be performed successfully by utilising assets that have been provided in liquidity pools.
   answerKeys:
-    - A
-    - B
+    - D
   subTopics:
-    - "centralised-vs-decentralised-finance"
+    - "uses-of-decentralised-finance"
   difficultyLevel: "Medium"
   choices:
-    - content: Entrepreneurs
+    - content: A protocol that automatically makes trades for a user
       key: A
       order: 0
-    - content: Small scale businesses
+    - content: A system that ensures there is always enough liquidity to make trades
       key: B
       order: 1
-    - content: High net worth individuals
+    - content: A code function that automatically lists new markets on an exchange
       key: C
       order: 2
-    - content: Everyone is benefited with high interest rates.
+    - content: All of the above
       key: D
       order: 3
 - uuid: b051f367-1e09-433e-870e-875c0c9c8ab8
   type: SingleChoice
-  content: Which DeFi component is used for lending and borrowing?
+  content: Which DeFi component is used for swaps and buying tokens?
   hint: NoHint
   explanation: Decentralised Exchanges or DEXs are used for lending and borrowing purposes in DeFi.
   answerKeys:
@@ -928,7 +925,7 @@
   type: SingleChoice
   content: What is the current number of transactions that Ethereum can process per second?
   hint: NoHint
-  explanation: Ethereum can currently process 13 transactions per second. This number is bound to increase in future with advancements in the technology.
+  explanation: Ethereum can currently process 15 transactions per second. This number is bound to increase in future with advancements in the technology.
   answerKeys:
     - D
   subTopics:
@@ -944,29 +941,36 @@
     - content: 10,000
       key: C
       order: 2
-    - content: 13
+    - content: 15
       key: D
       order: 3
 - uuid: 163f7e64-856c-4238-890a-93afe3e3481a
-  type: SingleChoice
-  content: As Decentralised finance is a new technology it is quite uncertain.
+  type: MultipleChoice
+  content: Which of the following applications are used for lending and borrowing in DeFi?
   hint: NoHint
-  explanation: DeFi is a net technology thus its future is not much certain. Moreover currently it is difficult to understand and use as well.
+  explanation: Aave and compound are the platforms which are used for lending and borrowing in DeFi.
   answerKeys:
-    - A
+    - B
+    - D
   subTopics:
     - "uses-of-decentralised-finance"
   difficultyLevel: "Medium"
   choices:
-    - content: True
+    - content: Uniswap
       key: A
       order: 0
-    - content: False
+    - content: Aave
       key: B
       order: 1
+    - content: Kraken
+      key: C
+      order: 1
+    - content: Compoud
+      key: D
+      order: 1  
 - uuid: 6459ff5b-03ad-421a-9ebe-9e85a230a7b2
   type: MultipleChoice
-  content: What are the problems regarding the scalability of DeFi?
+  content: What are the problems regarding the scalability of DeFi currently in Ethereum?
   hint: DeFi is developing thus it has some technological issues
   explanation: DeFi transactions take a long time to execute and these are expensive during time of congestion. These issues are temporary and can be resolved with the growing interest and technology in the space of DeFi.
   answerKeys:
@@ -1142,6 +1146,6 @@
     - content: Staking
       key: C
       order: 2
-    - content: None of the above
+    - content: All of the above
       key: D
       order: 3
