--- a/src/course.yaml
+++ b/src/course.yaml
@@ -25,7 +25,7 @@ topics:
         * What is DeFi 
         * CeFi vs DeFi
         * Use cases of DeFi
-    readings: blockchain_basics.yaml
+    readings: introduction_to_defi.yaml
     summaries: introduction_to_defi.yaml
     questions: introduction_to_defi.yaml
     status: In Progress
@@ -56,7 +56,7 @@ topics:
       * Fungible and non-fungible (NFT) tokens 
       * dApps
     readings: blockchain_basics.yaml
-    summaries: blockchain_basics.yaml
+    summaries: smart_contracts.yaml
     questions: blockchain_basics.yaml
     status: In Progress
     completionWeek: July 18
