--- a/src/questions/decentralized_exchanges.yaml
+++ b/src/questions/decentralized_exchanges.yaml
@@ -1,22 +1,3 @@
-- uuid: 3778f972-3042-43af-92ed-1c08cfb4139a
-  type: SingleChoice
-  content: What is an Exchange?
-  hint: NoHint
-  explanation: A marketplace to trade different types of assets for fiat currencies only.
-  answerKeys:
-    - D
-  subTopics:
-    - intro
-  difficultyLevel: Low
-  choices:
-    - content: A marketplace where securities, commodities, derivatives, and other financial instruments can not be traded
-      key: A
-    - content: A marketplace for crypto traders without any intermediary intervention
-      key: B
-    - content: A marketplace or platform which allows customers to trade cryptocurrencies for other assets
-      key: C
-    - content: A marketplace where securities, commodities, derivatives, and other financial instruments are traded
-      key: D
 - uuid: e7765f9d-6a7b-44c7-99fb-e0f67cea00eb
   type: MultipleChoice
   content: What is a Crypto Exchange?
@@ -24,18 +5,18 @@
   explanation: A marketplace to trade crypto / digital currencies for fiat or other crypto / digital currencies.
   answerKeys:
     - B
-    - D
+    - C
   subTopics:
     - intro
   difficultyLevel: Low
   choices:
-    - content: A marketplace for crypto traders without any intermediary intervention
+    - content: A marketplace which does not allow customers to trade cryptocurrencies for digital currencies
       key: A
     - content: A marketplace which allows customers to trade cryptocurrencies for digital currencies
       key: B
-    - content: A marketplace where securities, commodities, derivatives, and other financial instruments are traded
-      key: C
     - content: A marketplace which allows customers to trade cryptocurrencies for fiat money
+      key: C
+    - content: None of the above
       key: D
 - uuid: 10e96ed7-229f-4a44-9c48-01ec2a8f4896
   type: SingleChoice
@@ -97,7 +78,7 @@
       key: D
 - uuid: ad432625-2565-4976-ad0c-20c24a1aeae9
   type: SingleChoice
-  content: What are the types of CEX based on the order book model storage?
+  content: What are the types of Centralized Exchange based on the order book model storage?
   hint: Centralized Database and Blockchain Database
   explanation: There are two types of Order Book Model:- 1) Stores all data on a centralized database & 2) Stores all data on distributed, decentralized, and immutable data blocks of a Blockchain database.
   answerKeys:
@@ -106,9 +87,9 @@
     - crypto-exchange
   difficultyLevel: Low
   choices:
-    - content: CEX with Server Order Book Model
+    - content: Centralized Exchange with Server Order Book Model
       key: A
-    - content: CEX with Onchain Order Book Model
+    - content: Centralized Exchange with Onchain Order Book Model
       key: B
     - content: Both of these
       key: C
@@ -116,7 +97,7 @@
       key: D
 - uuid: ce272bb4-0b0a-404d-a816-f64706893a04
   type: MultipleChoice
-  content: CEX with Server Order Book Model has
+  content: Centralized Exchange with Server Order Book Model has
   hint: Faster, Uncensored, Free cancelation
   explanation: Due to centralized governance they are faster as no validator/miner action is required in trade execution, and not to pay any gas fees for transactions hence, no fees are required for canceled orders, also all types of traders’ data are in the hand of a central authority so no censorship resistance.
   answerKeys:
@@ -137,7 +118,7 @@
       key: D
 - uuid: 4985ad13-5ce6-4d04-8d66-96b378c13438
   type: MultipleChoice
-  content: CEX with Onchain Order Book Model has
+  content: Centralized Exchange with Onchain Order Book Model has
   hint: Slower, Censored
   explanation: Due to the Decentralized and Distributed Ledger storage system they are slower as the validator/miner action is required in trade execution and have to pay gas fees for transactions hence, fees are required for canceled orders, also all types of traders’ data are censorship resistance.
   answerKeys:
@@ -156,12 +137,15 @@
     - content: Censorship resistance
       key: D
 - uuid: 39cd2b05-81f4-4b0a-a540-e1d21fa275b7
-  type: SingleChoice
+  type: MultiChoice
   content: ____ are basic sets of rules that allow data and cryptocurrencies to be shared securely between different nodes (i.e computers) in the blockchain network.
   hint: NoHint
-  explanation: A protocol is a set of rules and instructions that needs to be followed by each entity of a blockchain system for secure transfer.
+  explanation: A protocol is a set of rules and instructions that needs to be followed by each entity of a blockchain system for secure transfer. Also, Liquidity Pools, Order Books and Exchanges are protocols too.
   answerKeys:
+    - A
     - B
+    - C
+    - D
   subTopics:
     - crypto-exchange
   difficultyLevel: Low
@@ -174,6 +158,7 @@
       key: C
     - content: Exchanges
       key: D
+
 - uuid: 4f6e29dd-b146-4601-85b9-92c648310b15
   type: SingleChoice
   content: DEX stands for
@@ -204,13 +189,13 @@
     - dex-definition
   difficultyLevel: Low
   choices:
-    - content: A peer-exchange-peer marketplace for crypto traders without any intermediary intervention
+    - content: A peer-exchange-peer marketplace for crypto traders without any third-party intervention
       key: A
-    - content: A peer-to-peer marketplace for crypto traders without any intermediary intervention
+    - content: A peer-to-peer marketplace for crypto traders without any third-party intervention
       key: B
-    - content: A peer-exchange-peer marketplace for crypto traders with intermediary interventions
+    - content: A peer-exchange-peer marketplace for crypto traders with third-party interventions
       key: C
-    - content: A peer-to-peer marketplace for crypto traders with some intermediary intervention
+    - content: A peer-to-peer marketplace for crypto traders with some third-party intervention
       key: D
 - uuid: 6c0e0592-9318-4ba8-863a-a83327b3ee5b
   type: SingleChoice
@@ -227,18 +212,17 @@
       key: A
     - content: Increased privacy due to the lack of knowing your customer (KYC) controls
       key: B
-    - content: No fees paid to the exchange
+    - content: None of the above
       key: C
     - content: All of the above
       key: D
 - uuid: bc4b0aef-bf74-4b0b-bdab-0bbbb744a3ca
-  type: MultipleChoice
+  type: SingleChoice
   content: What are the benefits of Decentralized exchanges over Centralized exchanges?
   hint: NoHint
-  explanation: In DEX we don't need to do any KYC nor have to pay any fees as it is governed by protocol and not by any centralized authority. But requires validation by the miners which takes time hence, the transaction little slower than CEX.
+  explanation: In DEX we don't need to do any KYC nor have to pay any fees as it is governed by protocol and not by any centralized authority. But requires validation by the miners which takes time hence, the transaction little slower than Centralized Exchange.
   answerKeys:
     - A
-    - C
   subTopics:
     - dex-definition
   difficultyLevel: Low
@@ -247,9 +231,9 @@
       key: A
     - content: KYC
       key: B
-    - content: No fees are paid to the exchange
-      key: C
     - content: Fast matching
+      key: C
+    - content: None of the above
       key: D
 - uuid: 6f9f9889-ad81-4272-a8d8-d58d5aa5a64b
   type: SingleChoice
@@ -293,7 +277,7 @@
   type: MultipleChoice
   content: What are the major downsides of decentralized exchanges?
   hint: Gas Fees and Slow transaction
-  explanation: Due to security and validation by the miners of a transaction, we have to pay Gas fees even if the transaction gets failed which makes it slower than the CEX.
+  explanation: Due to security and validation by the miners of a transaction, we have to pay Gas fees even if the transaction gets failed which makes it slower than the Centralized Exchange.
   answerKeys:
     - B
     - C
@@ -352,7 +336,7 @@
   type: SingleChoice
   content: Centralized exchanges do the market making by creating liquidity pools.
   hint: Order Book Model
-  explanation: CEX follows Order Book Model whereas the DEX follows protocols(such as AMM) for creating the liquidity pools.
+  explanation: Centralized Exchange follows Order Book Model whereas the DEX follows protocols(such as AMM) for creating the liquidity pools.
   answerKeys:
     - B
   subTopics:
@@ -412,7 +396,7 @@
     - amm
   difficultyLevel: Medium
   choices:
-    - content: A protocol that automatically makes trades for a user
+    - content: A type of decentralized exchange protocol
       key: A
     - content: A system that ensures there is always enough liquidity to make trades
       key: B
@@ -450,7 +434,7 @@
     - amm
   difficultyLevel: Low
   choices:
-    - content: Instant liquidity, irrespective of the trade size.
+    - content: Instant liquidity, irrespective of the trade size (assuming that trade size is always less than pool size).
       key: A
     - content: The ratio of assets X and Y sets the price of the pool.
       key: B
@@ -460,7 +444,7 @@
       key: D
 - uuid: de92eb6e-19cd-4ccb-937d-b2ad9968af78
   type: MultipleChoice
-  content: Cons of AMM are
+  content: Cons of Automated Market Maker are
   hint: Impermanent Loss, High Slippage, Total fund loss
   explanation: Cons as are:- 1) The danger of impermanent loss/coin De-Pegg may cause a total possible loss of funds in Liquidity Pools. 2) High slippage for low liquidity markets. So, please do observe and set your slippage tolerance threshold level while trading.
   answerKeys:
@@ -481,7 +465,7 @@
       key: D
 - uuid: 54e56af9-79d0-4581-83e3-feca21084c5f
   type: MultipleChoice
-  content: Advantages of AMM are
+  content: Advantages of Automated Market Maker are
   hint: No Order-Book, Less Gas fees
   explanation: Pros of an AMM:-1) No Order Book Maintenance for traders but arbitrage is required for them. 2)A simple implementation of Constant Product AMM causes less computation which results in Low gas costs.
   answerKeys:
@@ -501,7 +485,7 @@
       key: D
 - uuid: 2b52089f-3e36-43a8-8244-a1f6547c8ef4
   type: SingleChoice
-  content: Uniswap uses which of the following protocol?
+  content: Uniswap uses which of the following strategy?
   hint: CP
   explanation: Uniswap uses the Constant Product AMM protocol which is as follows:- Asset `X` quantity * Asset `Y` quantity = `K` (a constant)  or simply as `X*Y=K`. 
   answerKeys:
@@ -510,13 +494,13 @@
     - amm
   difficultyLevel: Low
   choices:
-    - content: Positive Product AMM
+    - content: Positive Product Automated Market Maker
       key: A
-    - content: Constant Product AMM
+    - content: Constant Product Automated Market Maker
       key: B
-    - content: Exponential Product AMM
+    - content: Exponential Product Automated Market Maker
       key: C
-    - content: Linear Product AMM
+    - content: Linear Product Automated Market Maker
       key: D
 - uuid: b86129d0-4d05-4995-8f82-3d5b6639b5bf
   type: SingleChoice
@@ -529,13 +513,13 @@
     - amm
   difficultyLevel: Medium
   choices:
-    - content: from the price difference of the same assets, let's say X and Y on different markets
+    - content: From the price difference of the same assets, let's say X and Y on different markets
       key: A
-    - content: from the price difference of different assets, let's say X and Y on different markets
+    - content: From the price difference of different assets, let's say X and Y on different markets
       key: B
-    - content: from the price difference of the same assets, let's say X and Y on the same markets
+    - content: From the price difference of the same assets, let's say X and Y on the same markets
       key: C
-    - content: from the price difference of the different assets, let's say X and Y on different markets
+    - content: From the price difference of the different assets, let's say X and Y on same markets
       key: D
 - uuid: 7e81c416-cd46-4424-b609-024c2d71ec9a
   type: SingleChoice
@@ -545,7 +529,7 @@
   answerKeys:
     - C
   subTopics:
-    - amm
+    - traders
   difficultyLevel: Low
   choices:
     - content: The expected decrease in price is based on the trading volume and available liquidity.
@@ -564,7 +548,7 @@
   answerKeys:
     - D
   subTopics:
-    - amm
+    - liquidity-providers
   difficultyLevel: Low
   choices:
     - content: Deviating
@@ -577,13 +561,13 @@
       key: D
 - uuid: ae7e6de1-c8ed-47ad-b2f4-f18ace5342f0
   type: SingleChoice
-  content: What are the types of rewards Liquidity Providers?
+  content: What are the types of rewards Liquidity Providers get on funding Liquidity Pools?
   hint: Two types
   explanation: Types of rewards that Liquidity Providers get on funding Liquidity Pools are:- 1) Trading Fees-that are paid by traders on each trade(eg, 0.03% in Curve.fi) 2) Liquidity Mining-an incentive/reward given to the Liquidity Providers(LP) proportional to the amount of liquidity provided by the LP. Rewards can also be provided to the LPs in terms of “Airdrops”.
   answerKeys:
     - C
   subTopics:
-    - amm
+    - liquidity-providers
   difficultyLevel: Low
   choices:
     - content: Trading Fees
@@ -602,12 +586,12 @@
   answerKeys:
     - B
   subTopics:
-    - amm
+    - traders
   difficultyLevel: Medium
   choices:
-    - content: Repayment to be paid with different asset
+    - content: Repayment to be done with different asset
       key: A
-    - content: Repayment to be paid with the same asset
+    - content: Repayment to be done with the same asset
       key: B
     - content: Repayment does not necessarily to be paid
       key: C
@@ -621,7 +605,7 @@
   answerKeys:
     - B
   subTopics:
-    - amm
+    - traders
   difficultyLevel: Low
   choices:
     - content: True
@@ -636,7 +620,7 @@
   answerKeys:
     - D
   subTopics:
-    - amm
+    - liquidity-providers
   difficultyLevel: Low
   choices:
     - content: Deposit only
@@ -651,11 +635,11 @@
   type: SingleChoice
   content:  ___ is the difference between the expected price of an order and the price when the order executes.
   hint: NoHint
-  explanation: Arbitrage is an investment strategy in which an investor (a.k.a. Arbitrageurs) simultaneously buys and sells the same asset in different markets(either AMM or some other market) to profit from tiny differences in the asset's listed price.
+  explanation: Slippage is the difference between the expected price of an order and the price when the order executes (due to the volatility of cryptocurrency prices).
   answerKeys:
     - C
   subTopics:
-    - amm
+    - traders
   difficultyLevel: Low
   choices:
     - content: De-peg
@@ -674,7 +658,7 @@
   answerKeys:
     - D
   subTopics:
-    - amm
+    - traders
   difficultyLevel: Low
   choices:
     - content: Flash swap
@@ -687,7 +671,7 @@
       key: D
 - uuid: 33af5875-1049-4656-b9ba-803a5e55bd0a
   type: MultipleChoice
-  content: Two types of dex aggregators
+  content: Two types of dex aggregators are
   hint: NoHint
   explanation: Types of DEX Aggregators are 1) Off-chain Aggregator (like 1inch, paraswap) and 2) On-chain Aggregator (like swapswap)
   answerKeys:
@@ -697,13 +681,13 @@
     - dex-aggregators
   difficultyLevel: Low
   choices:
-    - content: On-Chain
+    - content: On-Chain DEX Aggregator
       key: A
-    - content: On-Server
+    - content: On-Server DEX Aggregator
       key: B
-    - content: Off-Server
+    - content: Off-Server DEX Aggregator
       key: C
-    - content: Off-Chain
+    - content: Off-Chain DEX Aggregator
       key: D
 - uuid: b031bea3-af82-47fb-ae55-8d1ae58dd907
   type: MultipleChoice
@@ -756,9 +740,9 @@
     - dex-aggregators
   difficultyLevel: Low
   choices:
-    - content: On chain aggregator
+    - content: On-Chain DEX Aggregator
       key: A
-    - content: Off chain aggregator
+    - content: Off-Chain DEX Aggregator
       key: B
     - content: Both of these
       key: C
