--- a/src/questions/decentralized_exchanges.yaml
+++ b/src/questions/decentralized_exchanges.yaml
@@ -650,25 +650,6 @@
       key: C
     - content: AMM
       key: D
-- uuid: 2ddc6bd5-b036-48a2-b8af-6a1d5dbd5c57
-  type: SingeChoice
-  content: How traders make profit using AMM?
-  hint: Two ways
-  explanation: Traders use Arbitrage and Flash Swaps or Capital Free Arbitrage to make profits.
-  answerKeys:
-    - D
-  subTopics:
-    - traders
-  difficultyLevel: Low
-  choices:
-    - content: Flash swap
-      key: A
-    - content: Arbitrage
-      key: B
-    - content: None of these
-      key: C
-    - content: Both of these
-      key: D
 - uuid: 33af5875-1049-4656-b9ba-803a5e55bd0a
   type: MultipleChoice
   content: Two types of dex aggregators are
@@ -767,4 +748,25 @@
     - content: 1inch
       key: C
     - content: Uniswap
+      key: D
+- uuid: e83760e2-fdee-413a-bf4b-a89d0ef901a3
+  type: MultipleChoice
+  content: Which of the following statements about Impermanent Loss are valid?
+  hint: NoHint
+  explanation: Impermanent Loss arises when the price ratio of an asset and liquidity pool changes. So, Liquidity Providers (LPs) who have deposited funds in affected pools automatically incur this loss. The larger the shift in the price ratio the larger the loss. However, this loss is called impermanent for a reason as long as we do not withdraw deposited tokens at a time that the pool is experiencing a shift in price ratio it is still possible to mitigate the loss. This loss disappears when the prices of the tokens revert to the original value at which they were deposited. Those who withdraw funds before the prices revert suffer permanent losses.
+  answerKeys:
+    - A
+    - C
+    - D
+  subTopics:
+    - liquidity-providers
+  difficultyLevel: Medium
+  choices:
+    - content: Impermanent Loss arises when the price ratio of an asset and liquidity pool changes.
+      key: A
+    - content: This loss does not disappear when the prices of the tokens revert to the original value at which they were deposited.
+      key: B
+    - content: This loss disappears when the prices of the tokens revert to the original value at which they were deposited.
+      key: C
+    - content: Those who withdraw funds before the prices revert suffer permanent losses.
       key: D
